<resources>

    <string name="no">Нет</string>
    <string name="yes">Да</string>

    <string name="app_name">Playlist Maker</string>
    <string name="search_button">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="update_button">Обновить</string>

    <string name="black_theme">Темная тема</string>

    <string name="share">Поделиться</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="android_developer_url">https://practicum.yandex.ru/android-developer/</string>

    <string name="write_to_support">Написать в поддержку</string>
    <string name="student_email">sashkir7@yandex.ru</string>
    <string name="write_to_support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="write_to_support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer</string>

    <string name="track_default_name">Название песни</string>
    <string name="track_default_artist">Имя артиста</string>
    <string name="track_default_time">3:33</string>

    <string name="tracks_not_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>

    <string name="you_search">Вы искали</string>
    <string name="reset_history_button">Очистить историю</string>

    <string name="track_country">Страна</string>
    <string name="track_genre">Жанр</string>
    <string name="track_year">Год</string>
    <string name="track_album">Альбом</string>
    <string name="track_duration">Длительность</string>
    <string name="track_duration_zero">00:00</string>

    <string name="media_player_is_not_prepared">Подготовка еще не завершена</string>

    <string name="favorite_tracks_title">Избранные треки</string>
    <string name="playlists_title">Плейлисты</string>

    <string name="media_empty_tracks">Ваша медиатека пуста</string>
    <string name="media_new_playlist_button_title">Новый плейлист</string>
    <string name="media_empty_playlists">Вы не создали\nни одного плейлиста</string>

    <string name="create_title">Создать</string>
    <string name="save_title">Сохранить</string>
    <string name="add_new_playlist">Новый плейлист</string>
    <string name="add_new_playlist_name">Название*</string>
    <string name="add_new_playlist_description">Описание</string>
    <string name="add_new_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="add_new_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="add_new_playlist_dialog_cancel">Отмена</string>
    <string name="add_new_playlist_dialog_finish">Завершить</string>
    <string name="add_new_playlist_playlist_created">Плейлист "%1$s" создан!</string>

    <string name="add_to_playlist_title">Добавить в плейлист</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_dont_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>

    <string name="playlist_empty_tracks">Треки отсутствуют</string>
    <string name="confirm_delete_track_title">Хотите удалить трек?</string>
    <string name="confirm_delete_playlist_title">Хотите удалить плейлист?</string>
    <string name="confirm_delete_track_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="shared_empty_playlist_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

</resources>