<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SecondaryActivityStyle"
    tools:context="ui.settings.SettingsFragment">

    <TextView
        style="@style/SecondaryActivityTitleStyle"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/settings_button" />

    <FrameLayout
        style="@style/SettingsItemStyle"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="6dp">

        <TextView
            style="@style/SettingsTextViewStyle"
            android:text="@string/black_theme" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/themeSwitcher"
            style="@style/ThemeSwitchCompatStyle" />

    </FrameLayout>

    <FrameLayout style="@style/SettingsItemStyle">

        <TextView
            style="@style/SettingsTextViewStyle"
            android:text="@string/share_application" />

        <ImageView
            android:id="@+id/share_app_button"
            style="@style/SettingsIconStyle"
            android:src="@drawable/share_application_icon" />

    </FrameLayout>

    <FrameLayout style="@style/SettingsItemStyle">

        <TextView
            style="@style/SettingsTextViewStyle"
            android:text="@string/write_to_support" />

        <ImageView
            android:id="@+id/support_button"
            style="@style/SettingsIconStyle"
            android:src="@drawable/support_icon" />

    </FrameLayout>

    <FrameLayout style="@style/SettingsItemStyle">

        <TextView
            style="@style/SettingsTextViewStyle"
            android:text="@string/user_agreement" />

        <ImageView
            android:id="@+id/agreement_button"
            style="@style/SettingsIconStyle"
            android:src="@drawable/next_gray_icon" />

    </FrameLayout>

</LinearLayout>
