<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="4dp">

        <ImageView
            android:id="@+id/trackImage"
            style="@style/TrackItemImageStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trackName"
            style="@style/TrackTitleStyle"
            android:text="@string/track_default_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">

            <TextView
                android:id="@+id/trackArtist"
                style="@style/TrackSubtitleStyle"
                android:text="@string/track_default_artist" />

            <ImageView
                style="@style/TrackIconTitle"
                android:src="@drawable/point"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/trackTime"
                style="@style/TrackSubtitleStyle"
                android:text="@string/track_default_time" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        style="@style/TrackIconTitle"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/next_gray_icon"
        tools:ignore="ContentDescription" />

</LinearLayout>